// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Loader should render dark version 1`] = `
.c0 {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 9999;
}

.c1 {
  display: block;
  width: 100%;
  height: 7px;
  background: #A66885;
  -webkit-animation: jIfmAB 1.5s linear infinite forwards;
  animation: jIfmAB 1.5s linear infinite forwards;
}

<div
  class="c0"
>
  <div
    class="c1"
    type="DARK"
  />
</div>
`;

exports[`Component: Loader should render light version 1`] = `
.c0 {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 9999;
}

.c1 {
  display: block;
  width: 100%;
  height: 7px;
  background: #C8C8C8;
  -webkit-animation: jIfmAB 1.5s linear infinite forwards;
  animation: jIfmAB 1.5s linear infinite forwards;
}

<div
  class="c0"
>
  <div
    class="c1"
    type="LIGHT"
  />
</div>
`;
